<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/pozadinabez" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtOdabirKolegija"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtOdaberiKolegij"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/spKolegij"
                android:layout_width="163dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtOdabirEvidencije"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:text="@string/txtodaberiEvidenciju"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/spEvidencija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtUnosDatuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/txtUnosDatuma"
            android:textColor="@android:color/white" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnSpremiEvidenciju"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnPrihvatiEvidenciju" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtUnosBiljeske"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="15dp"
            android:text="@string/txtUnosBiljeske"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/etBiljeska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSpremiBiljesku"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSpremiBiljesku" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtUnosBodova"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/txtUnosBodova"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/etBodovi"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtOznakaBodova"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/txtOznakaBodova"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/etOznakaBodova"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSpremiBodove"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnUnosBodova" />
    </LinearLayout>

</ScrollView>