<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadinabez" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtOdabirDana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtOdabirDana"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/spOdabirDanaUnosR"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="56dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/txtOdabirKolegijaUnosR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtOdaberiKolegij"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/spOdabirKolegijaUnosR"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="56dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/txtOdabirNastave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtOdabirNastave"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/spOdabirNastaveUnosR"
            android:layout_width="223dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtVrijemeP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVrijemeP"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etVrijemeP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/txtUnosDvorane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUnosDvorane"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etUnosDvorane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtVrijemeK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVrijemeK"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/etVrijemeK"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSpremiStavku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerInParent="true"
        android:layout_marginTop="21dp"
        android:text="@string/spremi" />

</RelativeLayout>