<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignTop="@+id/spPregledPKolegiji"
    android:background="@drawable/pozadinabez"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtOdabirKolegija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOdaberiKolegij"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/spPregledPKolegiji"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/txtOdabirPrikaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtOdabirPrikaza"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <Spinner
        android:id="@+id/spOdabirPrikaza"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/btnOsvjezi"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnOsvjezi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0000FF" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvPodaci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black" >
    </ListView>

</LinearLayout>